<resources>
    <string name="app_name">My Application</string>
    <string name="header">ENTER YOUR PERSONAL DATA</string>
    <string name="user_name">Name</string>
    <string name="user_login">Email</string>
    <string name="user_password">Password</string>
    <string name="user_phone">Phone</string>
    <string name="confirm">CONFIRM</string>
    <string name="car_body_information">Car Body Information</string>
    <string name="car_information">Car Information</string>
    <string name="engine_information">Engine Information</string>
    <string name="price_information">Price Information</string>
    <string name="topic">Topic</string>
    <string name="serial_number">Serial number</string>

</resources>