<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <EditText
        android:id="@+id/nameField"
        android:layout_width="258dp"
        android:layout_height="54dp"
        android:layout_marginTop="150dp"
        android:backgroundTint="#DA00FF"
        android:backgroundTintMode="add"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="258dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#DA00FF"
        android:backgroundTintMode="add"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/user_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameField" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="258dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#DA00FF"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hapticFeedbackEnabled="true"
        android:inputType="textPassword"
        android:text="@string/user_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailField" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="258dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField"
        app:layout_constraintVertical_bias="0.038" />
</androidx.constraintlayout.widget.ConstraintLayout>