<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CarPageActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="417dp"
        android:layout_height="727dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/carTopicTextView"
                android:layout_width="413dp"
                android:layout_height="58dp"
                android:layout_marginBottom="5dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/carImageView"
                android:layout_width="match_parent"
                android:layout_height="236dp"
                app:srcCompat="@mipmap/ic_banner_audi_a5_1_foreground" />

            <TextView
                android:id="@+id/carArgumentsTextView"
                android:layout_width="403dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/car_information"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/brandTextView"
                android:layout_width="392dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/carLineTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/manufacturerCountryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/manufactureDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="20dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/engineArgumentsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/engine_information"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/engineBrandTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/engineModelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/engineTypeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/engineVolumeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="20dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/carBodyArgumentsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/car_body_information"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/carBodyModelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/carBodyTypeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/carBodyUsabilityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/carBodyWidthTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/carBodyLengthTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/carBodyHeightTextView"
                android:layout_width="394dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/carBodyWeightTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/carBodyPurposeTextView"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="20dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/carPriceInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/price_information"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/carPrice"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/testDriveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:onClick="testDriveButtonOnClick"
                android:text="Order a test drive" />

            <Button
                android:id="@+id/makeContractButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:onClick="makeContractButtonOnClick"
                android:text="Make a contract" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>